# washizu

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  clone_mortal.sh
Mortal/exe-wrapper/src/: main.rs
Mortal/libriichi/: build.rs
Mortal/libriichi/benches/: bench.rs
Mortal/libriichi/src/: array.rs  chi_type.rs  consts.rs  hand.rs  lib.rs  macros.rs  py_helper.rs  rankings.rs  stat.rs  tile.rs  vec_ops.rs
Mortal/libriichi/src/agent/: akochan.rs  batchify.rs  defs.rs  mjai_log.rs  mod.rs  mortal.rs  py_agent.rs  tsumogiri.rs
Mortal/libriichi/src/algo/: agari.rs  mod.rs  point.rs  shanten.rs
Mortal/libriichi/src/algo/sp/: calc.rs  candidate.rs  mod.rs  state.rs  tile.rs
Mortal/libriichi/src/arena/: board.rs  game.rs  mod.rs  one_vs_three.rs  result.rs  two_vs_two.rs
Mortal/libriichi/src/dataset/: gameplay.rs  grp.rs  invisible.rs  mod.rs
Mortal/libriichi/src/mjai/: bot.rs  event.rs  mod.rs
Mortal/libriichi/src/state/: action.rs  agent_helper.rs  getter.rs  item.rs  mod.rs  obs_repr.rs  player_state.rs  sp_tables.rs  test.rs  update.rs
rust_public/: Cargo.toml  README.md
rust_public/src/: main.rs
src/: danger.rs  ekyumoe.rs  ekyumoecompat.rs  main.rs  mjaigen.rs  mortalcompat.rs  state.rs
src/mortalcompat/: agari.rs  event.rs  mod.rs  sp.rs
