[package]
name = "washizu"
version = "0.1.0"
edition = "2024"

[dependencies]
libriichi = { path = "libriichi" }
# mortal requirements that are used in 1st party code:
derivative = "2"
console = "0.16"
flate2 = "1"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tinyvec = { version = "1", features = ["alloc", "serde", "rustc_1_57"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.99"
